# host_xvf_control

./: .gitignore  .gitmodules  .xmos_ignore_source_check  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  LICENCE.rst  LICENSE.rst  README.md  README.rst  requirements-dev.txt  requirements.txt
doc/release_notes/: release_notes_v2.0.1.txt
python/: coherence.py  mic_ref_correlate.py  read_aec_filter.py  read_nlmodel.py
src/: CMakeLists.txt  command_map.cpp  command_map.hpp  command_map_dummy.cpp  dfu_application.cmake  dfu_cmds.yaml  dfu_main.cpp  host_application.cmake  host_drivers.cmake  low_level_test_host_drivers.cmake  main.cpp  transport_config.yaml  utils.cpp  utils.hpp
src/command/: command.cpp  command.hpp
src/device/: device.hpp  device_i2c.cpp  device_spi.cpp  device_usb.cpp  device_utils.cpp  factory.cpp  factory.hpp
src/device/device_control_test_only/: device_access_i2c_rpi.c  device_access_spi_rpi.c
src/device/spi_driver/: bcm2835.h
src/dfu/: dfu_application.cmake  dfu_cmds.yaml  dfu_commands.cpp  dfu_commands.hpp  dfu_main.cpp  dfu_operations.cpp  dfu_operations.hpp  transport_config.yaml
src/special_commands/: filters.cpp  special_commands.cpp  special_commands.hpp
src/utils/: control_ret_str_map.h  platform_support.cpp  types_support.cpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  command_map_dummy.cpp  device_dummy.cpp  parse_control_ret_t.py  requirements.txt  test_control_ret_str_map.py  test_dummy_commands.py  test_options.py  test_utils.py
test/templates/: control_ret_str_map.h
tools/ci/: release-sources-allowlist.txt  release.sh
